[tool.poetry]
name = "ml-basic-kit"
version = "0.1.0"
description = ""
authors = ["Yarncraft <it.lucasengels@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
pandas = "^0.25.1"
pydataset = "^0.2.0"
sklearn = "^0.0.0"
prettyprinter = "^0.18.0"
pandas-profiling = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
